modularized and optimized

--- a/index.html
+++ b/index.html
@@ -561,6 +561,6 @@
       </div>
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/scriptv2.js"></script>
   </body>
 </html>
