--- a/nohtml.html
+++ b/nohtml.html
@@ -15,16 +15,24 @@
 
       </div>
       <ul class="student-list">
-
+        <!-- <li class="student-item cf"> 
+          <div class="student-details">
+            <img class="avatar" src="https://randomuser.me/api/portraits/thumb/women/67.jpg">
+            <h3>iboya vat</h3>
+            <span class="email">iboya.vat@example.com</span>
+          </div>
+          <div class="joined-details">
+            <span class="date">Joined 07/15/15</span>
+          </div>
+        </li>-->
       </ul>
       <!-- dynamically add pagination links here -->
       <div class="pagination">
       </div>
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script src="js/directory.js" charset="utf-8"></script>
     <!-- alternate between fetch and nohtml -->
-    <script src="js/script-nohtml.js"></script>
+    <script src="js/app.js"></script>
     <!-- <script src="js/scriptWithFetch.js" charset="utf-8"></script> -->
   </body>
 </html>
